--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "if-env": "^1.0.4"
+  },
   "devDependencies": {
     "concurrently": "^5.3.0"
   }
